--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
 		"@typescript-eslint/parser": "^4.23.0",
 		"eslint": "^7.26.0",
 		"mocha": "^8.3.2",
+		"ts-loader": "^9.2.3",
 		"typescript": "^4.3.5",
 		"web-tree-sitter": "^0.19.4",
+		"webpack": "^5.46.0",
+		"webpack-cli": "^4.7.2",
 		"yaml": "^1.10.2"
 	}
 }
-
